# my-minishell

./: CMakeLists.txt  Makefile  author  minishell
includes/: builtins.h  minishell.h
libft/: Makefile  ft_2darraycpy.c  ft_arraylen.c  ft_atoi.c  ft_bzero.c  ft_chrsetcmp.c  ft_countalpha.c  ft_freesher.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nstrjoin.c  ft_piecestrcpy.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_realloc.c  ft_reverselst.c  (+33 more)
libft_minishell/: Makefile  check_env_name.c  error.c  get_bin_paths.c  get_full_path.c
libft_minishell/include/: errors.h  libft_minishell.h
libft_minishell/src/: change_env_str.c  check_env_name.c  error.c  get_bin_paths.c  get_env_str.c  get_full_path.c
minishell.dSYM/Contents/Resources/DWARF/: minishell
srcs/: main.c
srcs/builtins/: cd_main.c  echo_main.c  env_main.c  exec_builtins.c  exit_main.c  setenv_main.c  unsetenv_main.c
srcs/execute/: get_execute.c  try_exec_bins.c
srcs/libft_minishell/: change_env_str.c  check_env_name.c  get_env_str.c  libft_minishell.h
srcs/parse/: dollar_esc.c  get_parse.c  tilda_esc.c
srcs/parse/dollar_esc/: dollar_esc.c  dollar_get_begin.c  dollar_get_end.c  dollar_get_middle.c  get_begin.c  get_end.c  get_middle.c
srcs/parse/tilda_esc/: tilda_esc.c
